redefine tag as a resource
